# CUCCL

./: .gitignore  CMakeLists.txt  readme.md
algo/: CMakeLists.txt
algo/CUCCL_CPU/: CUCCL_LE.hpp
algo/CUCCL_DPL/: CUCCL_DPL.cu  CUCCL_DPL.cuh
algo/CUCCL_LE/: CUCCL_LE.cu  CUCCL_LE.cuh  CUCCL_LE.hpp
algo/CUCCL_NP/: CUCCL_NP.cu  CUCCL_NP.cuh
algo/test/: test.cu  test_cv.cu
ccl/: CMakeLists.txt
ccl/CUCCL_LE/: CUCCL_LE.cu
ccl/CUCCL_NP/: CUCCL_NP.cu
ccl/test/: test.cu  test_cv.cu
examples/: kernel_evaluation.cpp
images/: _8.txt  im22.png_4.txt  im22.png_8.txt  im220.png_4.txt  im220.png_8.txt  im2200.png_4.txt  im2200.png_8.txt  im22000.png_4.txt  im22000.png_8.txt  im22001.png_4.txt  im22001.png_8.txt  im22002.png_4.txt  im22002.png_8.txt  im22003.png_4.txt  im22003.png_8.txt  im22004.png_4.txt  im22004.png_8.txt  im22005.png_4.txt  im22005.png_8.txt  im22006.png_4.txt  im22006.png_8.txt  im22007.png_4.txt  im22007.png_8.txt  im22008.png_4.txt  im22008.png_8.txt  im22009.png_4.txt  im22009.png_8.txt  im2201.png_4.txt  im2201.png_8.txt  im22010.png_4.txt  im22010.png_8.txt  im22011.png_4.txt  im22011.png_8.txt  im22012.png_4.txt  im22012.png_8.txt  im22013.png_4.txt  im22013.png_8.txt  im22014.png_4.txt  im22014.png_8.txt  im22015.png_4.txt  (+2168 more)
include/: evaluation.hpp  visualization.hpp
